--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "file-saver": "^2.0.5",
+    "flowbite-react": "^0.11.8",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
